unit test for user and friend service successful